create all frontend views

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
-<app-nav-bar></app-nav-bar>
-<div class="page-wrapper">
-  <div class="page-content-container">
-    <router-outlet></router-outlet>
+<ng-container *ngIf="isUserLoggedIn else loginOrRegisterPanel">
+  <app-nav-bar></app-nav-bar>
+  <div class="page-wrapper">
+    <div class="page-content-container">
+      <router-outlet></router-outlet>
+    </div>
   </div>
-</div>
+</ng-container>
+<ng-template #loginOrRegisterPanel>
+  <app-login-page (onAuthFinished)="onAuthFinished()"></app-login-page>
+</ng-template>
