--- a/src/app/components/action-parameters-form/action-parameters-form.component.html
+++ b/src/app/components/action-parameters-form/action-parameters-form.component.html
@@ -1,4 +1,5 @@
 <div class="form-container" [ngSwitch]="actionTypeId">
-  <app-price-change-form (onSetParams)="onParamsChanged($event)" *ngSwitchCase="ACTION_TYPES.CHANGE_PRICE"></app-price-change-form>
+  <app-price-change-form [onlyDisplayMode]="onlyDisplayMode" [params]="params" (onSetParams)="onParamsChanged($event)"
+                         *ngSwitchCase="ACTION_TYPES.CHANGE_PRICE"></app-price-change-form>
   <app-fake-promotion-form *ngSwitchCase="ACTION_TYPES.FAKE_PROMOTION"></app-fake-promotion-form>
 </div>
