--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,7 @@ h1, h2 {
 
 h1 {
   font-size: 2.5rem;
-  margin-bottom: 3rem;
+  margin-bottom: 5rem;
 }
 
 h2 {
@@ -23,7 +23,7 @@ h2 {
   margin-bottom: 1.5rem;
 }
 
-.section {
+.section:not(:last-of-type) {
   margin-bottom: 5rem;
 }
 
@@ -78,6 +78,7 @@ input, select {
 
   &:hover {
     background-color: #fae6bb;
+    cursor: pointer;
   }
 
   &:disabled, &:disabled:hover {
@@ -85,6 +86,60 @@ input, select {
     border-color: rgba(16, 16, 16, 0.3);
   }
 }
+
+.link {
+  text-decoration: underline;
+  color: #ad7a46;
+  transition: 0.05s ease-out;
+
+  &:hover {
+    color: #ea9f5e;
+    cursor: pointer;
+  }
+}
+
+.info-text {
+  max-width: 400px;
+  margin-bottom: 1rem;
+
+  .bold-text {
+    margin-bottom: 0.5rem;
+  }
+}
+
+.bold-text {
+  font-weight: bold;
+}
+
+.parameter {
+  margin-bottom: 0.7rem;
+
+  &-name {
+    font-weight: bold;
+  }
+}
+
+.site-logo {
+  font-size: 2rem;
+  font-weight: bold;
+  margin: auto 0 auto 2rem;
+  color: #fae6bb;
+}
+
+.page-wrapper {
+   width: 100%;
+   background-color: #e1e9f1;
+   padding: 160px 50px 100px 50px;
+
+   .page-content-container {
+     width: 85%;
+     background-color: white;
+     margin: 0 auto;
+     padding: 3rem;
+     box-shadow: 0 0 20px #b7b7b7;
+     border-radius: 5px;
+   }
+ }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
