--- a/src/app/components/offer-tile/offer-tile.component.html
+++ b/src/app/components/offer-tile/offer-tile.component.html
@@ -3,7 +3,7 @@
   <div class="offer-info">
     <div class="top-info">
       <div class="title">{{offer.title}}</div>
-      <div class="id">ID: {{offer.id}}</div>
+      <div class="id">ID: {{offer.externalId}}</div>
       <div class="amount">Amount: {{offer.amount}}</div>
     </div>
     <div class="low-info">
