--- a/src/app/components/pages/your-action-page/your-action-page.component.html
+++ b/src/app/components/pages/your-action-page/your-action-page.component.html
@@ -1,6 +1,6 @@
 <h1>Your actions</h1>
 <div class="section">
-  <table class="action-table">
+  <table class="action-table" *ngIf="!!actions">
     <tr>
       <th>Date created</th>
       <th>ID</th>
