--- a/src/app/components/pages/action-page/action-info-failed/action-info-failed.component.html
+++ b/src/app/components/pages/action-page/action-info-failed/action-info-failed.component.html
@@ -6,7 +6,7 @@
   <div *ngFor="let shopWithOffers of shopsWithOffers" class="info-text">
     <div class="bold-text">{{shopWithOffers.shop.name}}</div>
     <ul>
-      <li *ngFor="let offer of shopWithOffers.offers">ID: {{offer.id}}</li>
+      <li *ngFor="let offer of shopWithOffers.offers">ID: {{offer.externalId}}</li>
     </ul>
   </div>
 </div>
