--- a/src/app/components/offer-select-panel/offer-select-panel.component.scss
+++ b/src/app/components/offer-select-panel/offer-select-panel.component.scss
@@ -23,6 +23,10 @@
       .time-from-to input:first-child {
         margin-right: 1rem;
       }
+
+      .info-text {
+        color: #E40000;
+      }
     }
 
     &.right-side {
