--- a/src/styles.scss
+++ b/src/styles.scss
@@ -130,6 +130,7 @@ input, select {
    width: 100%;
    background-color: #e1e9f1;
    padding: 160px 50px 100px 50px;
+  min-height: 100vh;
 
    .page-content-container {
      width: 85%;
