--- a/src/app/components/pages/shops-page/shops-page.component.scss
+++ b/src/app/components/pages/shops-page/shops-page.component.scss
@@ -10,10 +10,10 @@
     margin: 0 1rem 1rem 0;
     height: 160px;
     width: 160px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     border-radius: 16px;
+    background-size: 70% auto;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
 
     &.connected, &:hover {
       background-color: #E8FAED;
